<resources>
    <string name="app_name">Quiz App</string>
    <string-array name="quiz_categories">
        <item>Choose a Category</item>
        <item>Math</item>
        <item>Science</item>
        <item>History</item>
        <item>Programming</item>
        <item>English</item>
        <item>Geography</item>
        <item>Sports</item>
        <item>General Knowledge</item>
        <item>Animals</item>
        <item>Languages</item>
    </string-array>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_bio">Bio</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_email">Email</string>
    <string name="save">Save</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_bio">Write a short bio</string>
    <string name="hint_phone_number">Enter your phone number</string>
    <string name="hint_email">Enter your email address</string>
    <string name="first_name_icon">First Name Icon</string>
    <string name="last_name_icon">Last Name Icon</string>
    <string name="bio_icon">Bio Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="category_image">Category image</string>
</resources>
