<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4F8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Information"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:layout_marginBottom="20dp"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/person1"
                android:background="@drawable/purple_background"
                android:padding="4dp"
                android:elevation="4dp"
                android:scaleType="centerCrop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:elevation="8dp"
            android:padding="16dp"
            android:layout_marginBottom="24dp"
            android:clipToPadding="false"
            android:clipChildren="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="📝"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/first_name_icon" />

                <TextView
                    android:id="@+id/labelFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_first_name"
                    android:textSize="16sp"
                    android:textColor="@color/purple"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:autofillHints="given-name"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#757070"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#6A1B9A"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="📝"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/last_name_icon" />

                <TextView
                    android:id="@+id/labelLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_last_name"
                    android:textSize="16sp"
                    android:textColor="@color/purple"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:autofillHints="family-name"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#757070"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#6A1B9A"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="🖋"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/bio_icon" />

                <TextView
                    android:id="@+id/labelBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_bio"
                    android:textSize="16sp"
                    android:textColor="@color/purple"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bio"
                android:inputType="textMultiLine"
                android:lines="2"
                android:gravity="top"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#757070"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#6A1B9A"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="📞"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/phone_icon" />

                <TextView
                    android:id="@+id/labelPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_phone_number"
                    android:textSize="16sp"
                    android:textColor="@color/purple"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:autofillHints="phone"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#757070"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#6A1B9A"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="📧"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/email_icon" />

                <TextView
                    android:id="@+id/labelEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:textSize="16sp"
                    android:textColor="@color/purple"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#757070"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#6A1B9A"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/purple"
            android:elevation="10dp" />
    </LinearLayout>
</ScrollView>
